fix: fix header and homepage padding alignment

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -17,16 +17,12 @@
   top: 0;
   left: 0;
 
-  // @include respond(tab-land) {
-  //   padding: var(--space-2) var(--space-10);
-  // }
-
-  // @include respond(tab-port) {
-  //   padding: var(--space-2) var(--space-5);
-  // }
+  @include respond(tab-port) {
+    padding: var(--space-3) var(--space-4);
+  }
 
   @include respond(phone) {
-    padding: var(--space-2) var(--space-2);
+    padding: var(--space-3) var(--space-3);
   }
 
   &--scrolled {
