--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -139,8 +139,13 @@
   position: relative;
   box-shadow: 0 2 0.4rem rgba(var(--color-shadow-rgb), 0.5);
 
+  @include respond(tab-port) {
+    padding: calc(var(--space-header) + var(--space-4)) var(--space-4)
+      var(--space-0);
+  }
+
   @include respond(phone) {
-    padding: calc(var(--space-header) + var(--space-4)) var(--space-2)
+    padding: calc(var(--space-header) + var(--space-4)) var(--space-3)
       var(--space-0);
   }
 
